FEAT: Major System Upgrade - AI Integration, Security Hardening & Stability Fixes
🚀 Key Highlights:
- Integrated Google Gemini AI (v1 Stable Endpoint) for robust Patent Analysis.
- Implemented 'Smart Auto-Discovery' for AI Models (Auto-fallback: Flash -> Pro).
- Upgraded Security Architecture:
  - Enforced strict JWT Authentication for all AI endpoints.
  - Resolved CORS Policy issues and 403 Forbidden errors.
  - Secured API Key handling (sanitization & trimming).

🔧 Backend Enhancements:
- Refactored 'AIAnalysisService.java' to use Stable v1 API (Fixed 404/400 errors).
- Optimized Database Entities (Filing, IPAsset, AIQueryHistory) for better performance.
- Added Hibernate Context fetching logic for smarter AI responses.
- Cleaned up project structure and removed legacy logs.

📂 Configuration:
- Added template 'application.properties' & 'service-account.json' for easier deployment setup.

✨ Frontend Sync:
- Aligned React Frontend API calls with secure Backend endpoints.
- Fixed 404/403 errors in Analysis Page history fetching.

Build Status: Stable ✅